tests/snapshots/dependencies__lib__pass__package_multi_target.snap
---
source: tests/dependencies.rs
expression: output
snapshot_kind: text
---
COMMAND:
dependencies
--lib

STDERR:

STDOUT:
digraph {

    graph [
        label="package_multi_target",
        labelloc=t,

        pad=0.4,

        // Consider rendering the graph using a different layout algorithm, such as:
        // [dot, neato, twopi, circo, fdp, sfdp]
        layout=neato,
        overlap=false,
        splines="line",
        rankdir=LR,

        fontname="Helvetica", 
        fontsize="36",
    ];

    node [
        fontname="monospace",
        fontsize="10",
        shape="record",
        style="filled",
    ];

    edge [
        fontname="monospace",
        fontsize="10",
    ];

    "package_multi_target" [label="crate|package_multi_target", fillcolor="#5397c8"]; // "crate" node


}
